# vortex

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  build.bat  compile.bat  server.py  setup.py  vortex.index
build_cmake/: Makefile  compile_commands.json
data/: sample1.txt  sample2.txt
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
include/: InvertedIndex.hpp
src/: InvertedIndex.cpp  bindings.cpp  main.cpp
tests/: test_bridge.py
